add better syntax highlighting using tree sitter