@@ -14,6 +14,14 @@ dependencies {
     testImplementation(kotlin("test"))
     implementation(libs.flexmark)
     implementation(libs.jsoup)
+    implementation(libs.jna)
+    implementation(libs.jnaPlatform)
+    implementation(files(rootProject.file("libs/jtreesitter-0.26.1.jar")))
+    implementation(libs.kruezberg.treesitter.language.pack){
+        exclude("io.github.tree-sitter", "jtreesitter")
+    }
+    implementation(libs.logback)
+
     implementation(libs.bundles.kotlinxEcosystem)
 }
 
@@ -23,4 +31,8 @@ kotlin {
 
 tasks.test {
     useJUnitPlatform()
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
